<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:stretchColumns="*"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TableRow android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_width="match_parent">
            <TextView android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:padding="7dp"
                android:nestedScrollingEnabled="true"
                android:textSize="@dimen/textView_numbers_big_textsize"
                android:background="@drawable/shape_dark_blue" />
            <TextView android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:text="@string/sales_ugk_table_m"
                android:gravity="center_horizontal"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:background="@drawable/shape_dark_blue"
                android:textSize="@dimen/textView_numbers_big_textsize"
                android:padding="7dp" />
            <TextView android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:text="@string/sales_ugk_table_d"
                android:gravity="center_horizontal"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:background="@drawable/shape_dark_blue"
                android:textSize="@dimen/textView_numbers_big_textsize"
                android:padding="7dp"/>
            <TextView android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:text="@string/sales_ugk_table_delta12"
                android:gravity="center_horizontal"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:background="@drawable/shape_dark_blue"
                android:textSize="@dimen/textView_numbers_big_textsize"
                android:padding="7dp"/>
            <TextView android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:text="@string/sales_ugk_table_delta3"
                android:gravity="center_horizontal"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:background="@drawable/shape_dark_blue"
                android:textSize="@dimen/textView_numbers_big_textsize"
                android:padding="7dp"/>
            <TextView android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:text="@string/sales_ugk_table_delta1"
                android:gravity="center_horizontal"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:background="@drawable/shape_dark_blue"
                android:textSize="@dimen/textView_numbers_big_textsize"
                android:padding="7dp"/>

        </TableRow>
        <TableRow android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_width="match_parent">
            <TextView android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/plane_12s_name"
                android:background="@drawable/shape_dark_blue"
                android:textSize="@dimen/textView_numbers_big_textsize"
                android:padding="7dp" />
            <TextView android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:background="@drawable/shape"
                android:textSize="@dimen/textView_numbers_big_textsize"
                android:padding="7dp" />
            <TextView android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:background="@drawable/shape"
                android:textSize="@dimen/textView_numbers_big_textsize"
                android:padding="7dp"/>
            <TextView android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:background="@drawable/shape"
                android:textSize="@dimen/textView_numbers_big_textsize"
                android:padding="7dp"/>
            <TextView android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:background="@drawable/shape"
                android:textSize="@dimen/textView_numbers_big_textsize"
                android:padding="7dp"/>
            <TextView android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:background="@drawable/shape"
                android:textSize="@dimen/textView_numbers_big_textsize"
                android:padding="7dp"/>

        </TableRow>
        <TableRow android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_width="match_parent">
            <TextView android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/plane_3s_name"
                android:background="@drawable/shape_dark_blue"
                android:textSize="@dimen/textView_numbers_big_textsize"
                android:padding="7dp" />
            <TextView android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:background="@drawable/shape"
                android:textSize="@dimen/textView_numbers_big_textsize"
                android:padding="7dp" />
            <TextView android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:background="@drawable/shape"
                android:textSize="@dimen/textView_numbers_big_textsize"
                android:padding="7dp"/>
            <TextView android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:background="@drawable/shape"
                android:textSize="@dimen/textView_numbers_big_textsize"
                android:padding="7dp"/>
            <TextView android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:background="@drawable/shape"
                android:textSize="@dimen/textView_numbers_big_textsize"
                android:padding="7dp"/>
            <TextView android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:background="@drawable/shape"
                android:textSize="@dimen/textView_numbers_big_textsize"
                android:padding="7dp"/>

        </TableRow>
        <TableRow android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_width="match_parent">
            <TextView android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/plane_1s_name"
                android:background="@drawable/shape_dark_blue"
                android:textSize="@dimen/textView_numbers_big_textsize"
                android:padding="7dp"/>
            <TextView android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:background="@drawable/shape"
                android:textSize="@dimen/textView_numbers_big_textsize"
                android:padding="7dp" />
            <TextView android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:background="@drawable/shape"
                android:textSize="@dimen/textView_numbers_big_textsize"
                android:padding="7dp"/>
            <TextView android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:background="@drawable/shape"
                android:textSize="@dimen/textView_numbers_big_textsize"
                android:padding="7dp"/>
            <TextView android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:background="@drawable/shape"
                android:textSize="@dimen/textView_numbers_big_textsize"
                android:padding="7dp"/>
            <TextView android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:background="@drawable/shape"
                android:textSize="@dimen/textView_numbers_big_textsize"
                android:padding="7dp"/>

        </TableRow>
        <TableRow android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_width="match_parent">
            <TextView android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/norm_name"
                android:background="@drawable/shape_dark_blue"
                android:textSize="@dimen/textView_numbers_big_textsize"
                android:padding="7dp"/>
            <TextView android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:background="@drawable/shape"
                android:textSize="@dimen/textView_numbers_big_textsize"
                android:padding="7dp" />
            <TextView android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:background="@drawable/shape"
                android:textSize="@dimen/textView_numbers_big_textsize"
                android:padding="7dp"/>
            <TextView android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:background="@drawable/shape"
                android:textSize="@dimen/textView_numbers_big_textsize"
                android:padding="7dp"/>
            <TextView android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:background="@drawable/shape"
                android:textSize="@dimen/textView_numbers_big_textsize"
                android:padding="7dp"/>
            <TextView android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:background="@drawable/shape"
                android:textSize="@dimen/textView_numbers_big_textsize"
                android:padding="7dp"/>

        </TableRow>
        <TableRow android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_width="match_parent">
            <TextView android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/fact_name"
                android:background="@drawable/shape_dark_blue"
                android:textSize="@dimen/textView_numbers_big_textsize"
                android:padding="7dp" />
            <TextView android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:background="@drawable/shape"
                android:textSize="@dimen/textView_numbers_big_textsize"
                android:padding="7dp" />
            <TextView android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:background="@drawable/shape"
                android:textSize="@dimen/textView_numbers_big_textsize"
                android:padding="7dp"/>
            <TextView android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:background="@drawable/shape"
                android:textSize="@dimen/textView_numbers_big_textsize"
                android:padding="7dp"/>
            <TextView android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:background="@drawable/shape"
                android:textSize="@dimen/textView_numbers_big_textsize"
                android:padding="7dp"/>
            <TextView android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:background="@drawable/shape"
                android:textSize="@dimen/textView_numbers_big_textsize"
                android:padding="7dp"/>

        </TableRow>

    </TableLayout>
</LinearLayout>