<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/linerlayout_global">

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/chart"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_margin="@dimen/char_layout_margin" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="4"
        android:id="@+id/linerlayout_numbers">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:id="@+id/linerlayout_numbers_up"
        android:background="@drawable/shape_layout_numbers_up"
        android:layout_marginTop="@dimen/linerlayout_numbers_up_marginTop">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:background="@drawable/shape_layout_numbers_up"
            android:id="@+id/linerlayout_numbers_up1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/textView_numbers_up1"
                android:id="@+id/textView_numbers_up1"
                android:layout_gravity="center"
                android:textSize="@dimen/textView_numbers_1_textsize" />
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/linerlayout_numbers_up2">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/linerlayout_numbers_up2_1">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/_100"
                    android:id="@+id/textView_numbers_up2_1"
                    android:layout_gravity="top|center|right"
                    android:layout_marginRight="@dimen/linerlayout_numbers_up_marginRight"
                    android:gravity="right"
                    android:textColor="@color/accent_material_light"
                    android:textSize="@dimen/textView_numbers_2_1_textsize" />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/linerlayout_numbers_up2_2"
                android:baselineAligned="false">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:id="@+id/linerlayout_numbers_up2_2_1"></LinearLayout>
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:id="@+id/linerlayout_numbers_up2_2_2">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/_88"
                        android:id="@+id/textView_numbers_up2_2_2"
                        android:layout_gravity="top|center|right"
                        android:layout_marginRight="@dimen/linerlayout_numbers_up_marginRight"
                        android:gravity="right"
                        android:textColor="@color/background_material_dark"
                        android:textSize="@dimen/textView_numbers_2_2_2_textsize" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/linerlayout_numbers_down"
            android:background="@drawable/shape_layout_numbers_down"
            android:layout_marginBottom="@dimen/linerlayout_numbers_down_marginBottom">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:background="@drawable/shape_layout_numbers_up"
                android:id="@+id/linerlayout_numbers_down1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/textView_numbers_down1"
                    android:id="@+id/textView_numbers_down1"
                    android:layout_gravity="center"
                    android:textSize="@dimen/textView_numbers_1_textsize" />
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/linerlayout_numbers_down2">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:id="@+id/linerlayout_numbers_down2_1">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/_100"
                        android:id="@+id/textView_numbers_down2_1"
                        android:layout_gravity="top|center|right"
                        android:layout_marginRight="@dimen/linerlayout_numbers_down_marginRight"
                        android:gravity="right"
                        android:textColor="@color/accent_material_light"
                        android:textSize="@dimen/textView_numbers_2_1_textsize" />
                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:id="@+id/linerlayout_numbers_down2_2"
                    android:baselineAligned="false">
                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:id="@+id/linerlayout_numbers_down2_2_1"></LinearLayout>
                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:id="@+id/linerlayout_numbers_down2_2_2">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:text="@string/_88"
                            android:id="@+id/textView_numbers_down2_2_2"
                            android:layout_gravity="top|center|right"
                            android:layout_marginRight="@dimen/linerlayout_numbers_down_marginRight"
                            android:gravity="right"
                            android:textColor="@color/background_material_dark"
                            android:textSize="@dimen/textView_numbers_2_2_2_textsize" />
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>